[package]
name = "foundationdb"
license = "Apache-2.0"
version = "0.1.0"  # Version of rust demo; not of FDB (for now)
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
bytes = {version = "1.1"}
clap = {version = "3.2", features = ["cargo", "derive"] }
cxx = "1.0"
dashmap = {version = "5.3" }
fastrand = {version = "1.7" } # would use rand, but it makes it hard to get a non-cryptographically-secure, thread-local RNG, and fastrand makes that easy.
fxhash = {version = "0.2.1" }
flatbuffers = { version = "2.1" }
futures-util = { version = "0.3.1", default-features = false }
num-traits = "0.2"
num-derive = "0.3"
pin-project = "1.0"
regex = "1"
tokio = { version = "1.19", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tower = { version = "0.4.12", features = ["full"] }
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }

[dev-dependencies]
tokio = { version = "1.19", features = ["test-util"] }
criterion = { version = "0.3.5", features = ["html_reports"] }

[build-dependencies]
flatc-rust = { version = "0.2" }
clap = {version = "3.2", features = ["cargo", "derive"]}
clap_complete = "3.2"
cxx-build = "1.0"

[[bin]]
name = "testserver"
path = "src/testserver/main.rs"

[[bin]]
name = "testclient"
path = "src/testclient/main.rs"

[[bin]]
name = "fdb"
path = "src/fdb/main.rs"